// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base rendering tests renders correctly App with default Styled 1`] = `
<div
  className="div-8-0-9"
>
  <header
    className="header-9-0-10"
  >
    <h1
      className="h1-12-0-11"
    >
      Title
    </h1>
  </header>
  <section
    className="section-10-0-12"
    data-name="content"
  >
    <button
      className="button-13-0-13"
    >
      primitive test
    </button>
    <button
      className="button-14-0-14"
    >
      dynamic primitive test
    </button>
  </section>
  <section
    className="section-11-0-15"
  >
    Another section
  </section>
</div>
`;

exports[`base rendering tests renders correctly App with default styled 1`] = `
<div
  className="div-1-0-1"
>
  <header
    className="header-2-0-2"
  >
    <h1
      className="h1-5-0-3"
    >
      Title
    </h1>
  </header>
  <section
    className="section-3-0-4"
    data-name="content"
  >
    <button
      className="button-6-0-5"
    >
      primitive test
    </button>
    <button
      className="button-7-0-6"
    >
      dynamic primitive test
    </button>
  </section>
  <section
    className="section-4-0-7"
  >
    Another section
  </section>
</div>
`;

exports[`base rendering tests renders correctly App with injectStyled 1`] = `
<div
  className="root-0-16"
>
  <div
    className="div-15-0-18"
  >
    <header
      className="header-16-0-19"
    >
      <h1
        className="h1-19-0-20"
      >
        Title
      </h1>
    </header>
    <section
      className="section-17-0-21"
      data-name="content"
    >
      <button
        className="button-20-0-22"
      >
        primitive test
      </button>
      <button
        className="button-21-0-23"
      >
        dynamic primitive test
      </button>
    </section>
    <section
      className="section-18-0-24"
    >
      Another section
    </section>
  </div>
</div>
`;
